// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Search/PlateSearchInput NoPlate smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="jumbotron">
        <div class="row">
          <form class="form">
            <div class="form-row">
              <div class="col-md">
                <div class="form-group">
                  <input autocomplete="off"
                         class="form-control"
                         id="plate-input"
                         name="plateId"
                         placeholder="Enter a plate..."
                         type="text"
                         value
                  >
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/Search/PlateSearchInput PlateEntered smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="jumbotron">
        <div class="row">
          <form class="form">
            <div class="form-row">
              <div class="col-md">
                <div class="form-group">
                  <input autocomplete="off"
                         class="form-control"
                         id="plate-input"
                         name="plateId"
                         placeholder="Enter a plate..."
                         type="text"
                         value="ABC1234"
                  >
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
